# rpc-helloworld

./: .gitignore
dart-ui-rust-helloworld/: README.md  generate_rpc.sh  pubspec.yaml
dart-ui-rust-helloworld/lib/: main.dart
dart-ui-rust-helloworld/lib/src/: Bluetooth.dart  HomePage.dart
proto/: bluetooth.proto  helloworld.proto
rust-hello-world-rpc/: Cargo.toml  build.rs
rust-hello-world-rpc/src/: server.rs
rust-hello-world-rpc/src/bluetooth/: server.rs
