[package]
name = "rust-hello-world-rpc"
version = "0.1.0"
authors = ["jdollar <dollarhidejoel@gmail.com>"]
edition = "2018"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[dependencies]
futures = "0.1"
env_logger = { version = "0.5", default-features = false }
bytes = "0.4.12"
prost = "0.5.0"
tokio = "0.1.22"
log = "0.4"
http = "0.1"
tower-hyper = "0.1"
hyper = "0.12"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-grpc = { version = "0.1.0", features = ["tower-hyper"] }
tower-util = "0.1"

[build-dependencies]
tower-grpc-build = { version = "0.1.0", features = ["tower-hyper"] }
